fixes #100 native share button layout issue

--- a/src/Info.scss
+++ b/src/Info.scss
@@ -74,6 +74,10 @@ $padding: 20px;
     }
   }
 
+  .share-links-mobile {
+    display: block;
+  }
+
   .share-links {
     justify-content: flex-end;
   }
